--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 
 .teclado--botao {
     width: 70px;
-    height: 70px;
+    height: 40px;
     background-color: #000;
     color: #fff;
     font-size: 25px;
@@ -39,4 +39,24 @@ body {
     margin: 10px;
     cursor: pointer;
     box-shadow: 2px 2px 0px #555;
+}
+
+.botao--branco {
+    background-color: #fff;
+    color: #000;
+    font-size: 15px;
+}
+
+.botao--corrige {
+    background-color: #f09056;
+    color: #000;
+    font-size: 15px;
+}
+
+.botao--confirmar {
+    background-color: #48c079;
+    color: #000;
+    font-size: 15px;
+    width: 90px;
+    height: 50px;
 }
